--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-domain: docker-support.tet42.org
-url: https://docker-support.tet42.org
+domain: lemmyhelp.tet42.org
+url: https://lemmyhelp.tet42.org
 
-title: Lemmy Docker Support
+title: Lemmy Help
 email: tet42@tet42.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A place to get help with Lemmy. Specifically with the docker version.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
@@ -36,7 +34,6 @@ github_username:  tek42
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-target-blank
 markdown: redcarpet
 extensions: [fenced_code_blocks]
 
