--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ domain: lemmyhelp.tet42.org
 url: https://lemmyhelp.tet42.org
 
 title: Lemmy Help
-email: tet42@tet42.org
+email: lemmyhelp@tet42.org
 description: >- # this means to ignore newlines until "baseurl:"
   A place to get help with Lemmy. Specifically with the docker version.
 baseurl: "" # the subpath of your site, e.g. /blog
