--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,14 @@ domain: lemmyhelp.tet42.org
 url: https://lemmyhelp.tet42.org
 
 title: Lemmy Help
-email: lemmyhelp@tet42.org
+matrix: https://matrix.to/#/#lemmy-support-new-instance:discuss.online
+# email: lemmyhelp@tet42.org
 description: >- # this means to ignore newlines until "baseurl:"
   A place to get help with Lemmy. Specifically with the docker version.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-github_username:  tek42
+#github_username:  tek42
 
 # Build settings
 theme: minima
